WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230652
[JSC] emoji and eor collations are missing
https://bugs.webkit.org/show_bug.cgi?id=230652
Summary
[JSC] emoji and eor collations are missing
Yusuke Suzuki
Reported
2021-09-22 16:23:21 PDT
[JSC] emoji and eor collations are missing
Attachments
Patch
(5.79 KB, patch)
2021-09-22 16:24 PDT
,
Yusuke Suzuki
ross.kirsling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-09-22 16:24:33 PDT
Created
attachment 438989
[details]
Patch
Ross Kirsling
Comment 2
2021-09-22 17:25:13 PDT
Comment on
attachment 438989
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438989&action=review
r=me with a question
> Source/JavaScriptCore/runtime/IntlObject.cpp:1661 > + // ICU ~69 has a bug that does not report "emoji" and "eor" for collation when using ucol_getKeywordValues.
There's no concern for older ICU versions here, is there?
Yusuke Suzuki
Comment 3
2021-09-22 17:28:15 PDT
Comment on
attachment 438989
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438989&action=review
>> Source/JavaScriptCore/runtime/IntlObject.cpp:1661 >> + // ICU ~69 has a bug that does not report "emoji" and "eor" for collation when using ucol_getKeywordValues. > > There's no concern for older ICU versions here, is there?
Even though it is not supported, it is still OK to have that in available collations, since it just means that we have this collation, but no locale supports that.
Yusuke Suzuki
Comment 4
2021-09-22 17:39:31 PDT
Committed
r282897
(
242025@main
): <
https://commits.webkit.org/242025@main
>
Radar WebKit Bug Importer
Comment 5
2021-09-22 17:40:28 PDT
<
rdar://problem/83425179
>
Darin Adler
Comment 6
2021-10-01 16:43:57 PDT
Comment on
attachment 438989
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438989&action=review
> Source/JavaScriptCore/runtime/IntlObject.cpp:1688 > + elements.resize(elements.size() - (elements.end() - end));
Not important, but for slightly more efficient code this can use shrink instead of resize.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug