[JSC] emoji and eor collations are missing https://bugs.webkit.org/show_bug.cgi?id=230652

Reviewed by Ross Kirsling.

JSTests:

* stress/intl-enumeration.js:
* test262/expectations.yaml:

Source/JavaScriptCore:

Due to ICU's bug, "emoji" and "eor" collations are missing from enumeration.
This patch adds work-around for this.

* runtime/IntlObject.cpp:
(JSC::availableCollations):

Canonical link: https://commits.webkit.org/242025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282897 268f45cc-cd09-0410-ab3c-d52691b4dbfc